--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Dustlikdon.uz</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -32,14 +35,51 @@
                          alt="Call Icon"
                          width="17"
                          height="17">
-                         <p class="phone-number">
-                            99872 335-41-16
-                         </p>
+                    <p class="phone-number">
+                        99872 335-41-16
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+<!--Navbar start!-->
+    <nav class="navbar">
+        <div class="navbar-wrapper">
+            <div class="nav-logo">
+                <a class="nav-logo-link" href="index.html" >
+                    <img class="nav-logo-img"
+                         src="images/house.svg"
+                         alt="House Icon"
+                         width="22"
+                         height="20">
+                </a>
+            </div>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Jamiyat haqida</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Struktura</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Yangiliklar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Elektron murojaatlar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Interaktiv xizmatlar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Aloqa</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<!--Navbar end!-->
 </header>
+
 <!--Header end-->
 
 </body>
