section1, section2 end

--- a/index.html
+++ b/index.html
@@ -79,8 +79,380 @@
     </nav>
 <!--Navbar end!-->
 </header>
-
 <!--Header end-->
+
+<!--Main start-->
+<main class="main">
+<!--Section1 start-->
+    <section class="section1">
+        <div class="section1-wrapper">
+            <img class="section1-img"
+                 src="images/bacground-img.png"
+                 alt="Bug'doyzor"
+                 width="1440"
+                 height="517">
+            <img class="section1-logo"
+                 src="images/brend-logo.svg"
+                 alt="Logotip"
+                 width="150"
+                 height="150">
+            <div class="section1-card">
+                <div class="circle">
+                    <img class="section1-symbol1"
+                         src="images/simbol.svg"
+                         alt="Left symbol"
+                         width="30"
+                         height="30">
+                </div>
+                <h1 class="section1-title">
+                    O`ZBEKISTON RESPUBLIKASI <br>
+                    "O`ZDONMAXSULOT" AKSIYADORLIK KOMPANIYASI <br>
+                    "DO`STLIKDONMAXSULOTLARI" AKSIYADORLIK JAMIYATI <br>
+                </h1>
+                <div class="circle">
+                    <img class="section1-symbol2"
+                         src="images/right-symbol.svg"
+                         alt="Right symbol"
+                         width="30"
+                         height="30">
+                </div>
+            </div>
+            <div class="circle1"></div>
+        </div>
+    </section>
+<!--Section1 end-->
+
+<!--section2 start-->
+    <section class="section2">
+        <div class="section2-wrapper">
+            <div class="section2-row">
+                <h2 class="section2-title">
+                    Yangiliklar
+                </h2>
+                <div class="section2-row-end">
+                    <div class="square-left">
+                        <img class="square-img"
+                             src="images/simbol.svg"
+                             alt="Back"
+                             width="30"
+                             height="30">
+                    </div>
+                    <div class="square-left">
+                        <img class="square-img"
+                             src="images/right-symbol.svg"
+                             alt="Back"
+                             width="30"
+                             height="30">
+                    </div>
+                </div>
+            </div>
+            <div class="section2-card">
+                    <img class="section2-card1-img"
+                         src="images/card1.png"
+                         alt="Logo"
+                         width="350"
+                         height="222">
+                    <div class="not">
+                        <img class="not-date"
+                             src="images/kalindar.svg"
+                             alt=""
+                             width="20"
+                             height="20">
+                        <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                        <img class="not-watch"
+                             src="images/eye.svg"
+                             alt="Watch"
+                             width="20"
+                             height="20">
+                        <span class="watch">
+                            321
+                        </span>
+                        <img class="not-massage"
+                             src="images/massage.svg"
+                             alt="Massages"
+                             width="20"
+                             height="20">
+                        <span class="massage">
+                            100
+                        </span>
+                    </div>
+                    <h3 class="section2-card-title">
+                        E’LON !!!
+                    </h3>
+                    <p class="section2-card-desc">
+                        "DO`STLIKDONMAXSULOTLARI" AJ ning <br>
+                        aksiyadorlari diqqatiga! 2020-yil 27-mart <br>
+                        kuni soat 9:00 dan...
+                    </p>
+                    <button class="section2-card-button" type="button">
+                        <span class="button-title">
+                            batafsil
+                        </span>
+                    </button>
+                </div>
+            <div class="section2-card2">
+                <img class="section2-card2-img"
+                     src="images/card2.png"
+                     alt="Logo"
+                     width="220"
+                     height="220">
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <h3 class="section2-card2-title">
+                    Eksport qiluvchi tadbirkorlik
+                    subektlariga...
+                </h3>
+                <p class="section2-card-desc">
+                    “O‘zdonmaxsulot” aksiyadorlik kompaniya <br>
+                    tizim korxonalari tomonidan istisno <br>
+                    tarikasida maxalliy...
+                </p>
+                <button class="section2-card2-button" type="button">
+                        <span class="card2-button-title">
+                            batafsil
+                        </span>
+                </button>
+            </div>
+            <div class="section2-card">
+                <img class="section2-card3-img"
+                     src="images/card3.png"
+                     alt="..."
+                     width="350"
+                     height="222">
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <h3 class="section2-card3-title">
+                    "DO`STLIKDONMAXSULOTLARI" AJ <br>
+                    boshqaruv raisi...
+                </h3>
+                <p class="section2-card-desc">
+                    "DO`STLIKDONMAXSULOTLARI" AJ ning <br>
+                    boshqaruv raisi tomonidan Do’stlik <br>
+                    tumanidagi 2-sonli...
+                </p>
+                <button class="section2-card-button" type="button">
+                        <span class="button-title">
+                            batafsil
+                        </span>
+                </button>
+            </div>
+
+            <div class="section2-row">
+                <h2 class="section2-title">
+                    Korxonamiz yangiliklari
+                </h2>
+                <div class="section2-row-end">
+                    <div class="square-left">
+                        <img class="square-img"
+                             src="images/simbol.svg"
+                             alt="Back"
+                             width="30"
+                             height="30">
+                    </div>
+                    <div class="square-left">
+                        <img class="square-img"
+                             src="images/right-symbol.svg"
+                             alt="Back"
+                             width="30"
+                             height="30">
+                    </div>
+                </div>
+            </div>
+            <div class="section2-card">
+                <img class="section2-card4-img"
+                     src="images/card4.png"
+                     alt="Logo"
+                     width="350"
+                     height="222">
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <h3 class="section2-card-title">
+                    E’LON !!!
+                </h3>
+                <p class="section2-card-desc">
+                    2019 yil 27-mart kuni soat 10.00da <br>
+                    “Do‘stlikdonmaxsulotlari” aksiyadorlik <br>
+                    jamiyati aksiyadorlarining umumiy
+                </p>
+                <button class="section2-card-button" type="button">
+                        <span class="button-title">
+                            batafsil
+                        </span>
+                </button>
+            </div>
+            <div class="section2-card">
+                <img class="section2-card3-img"
+                     src="images/card3.png"
+                     alt="..."
+                     width="350"
+                     height="222">
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <h3 class="section2-card3-title">
+                    "DO`STLIKDONMAXSULOTLARI" AJ <br>
+                    boshqaruv raisi...
+                </h3>
+                <p class="section2-card-desc">
+                    "DO`STLIKDONMAXSULOTLARI" AJ ning <br>
+                    boshqaruv raisi tomonidan Do’stlik <br>
+                    tumanidagi 2-sonli...
+                </p>
+                <button class="section2-card-button" type="button">
+                        <span class="button-title">
+                            batafsil
+                        </span>
+                </button>
+            </div>
+            <div class="section2-card">
+                <img class="section2-card6-img"
+                     src="images/card6.png"
+                     alt="..."
+                     width="350"
+                     height="222">
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <h3 class="section2-card3-title">
+                    Xisobot: Buxgalteriya balansi <br>
+                    2 kvartal
+                </h3>
+                <p class="section2-card-desc">
+                    Buxgalteriya balansi 2 kvartal bo’yicha <br>
+                    foto jamlanma.
+                </p>
+                <button class="section2-card-button" type="button">
+                        <span class="button-title">
+                            batafsil
+                        </span>
+                </button>
+            </div>
+        </div>
+
+    </section>
+<!--section2 end-->
+</main>
+<!--Main end-->
 
 </body>
 </html>
