--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 <!--Section1 end-->
 
-<!--section2 start-->
+<!--Section2 start-->
     <section class="section2">
         <div class="section2-wrapper">
             <div class="section2-row">
@@ -450,7 +450,33 @@
         </div>
 
     </section>
-<!--section2 end-->
+<!--Section2 end-->
+
+<!--Section3 start-->
+    <section class="section3">
+        <div class="section3-wrapper">
+            <img class="section3-start"
+                 src="images/aside-img1.png"
+                 alt="Logo"
+                 width="208"
+                 height="206">
+            <h2 class="section3-title">
+                Shikoyatlar mavjudmi? <br>
+                onlayn tarzda yuboring
+            </h2>
+            <button class="section3-button" type="submit">
+                <span class="section3-button-title">
+                    Murojaat yuborish
+                </span>
+            </button>
+            <img class="section3-end"
+                 src="images/aside-img2.png"
+                 alt="Logo"
+                 width="310"
+                 height="206">
+        </div>
+    </section>
+<!--Section3 end-->
 </main>
 <!--Main end-->
 
