--- a/index.html
+++ b/index.html
@@ -477,6 +477,158 @@
         </div>
     </section>
 <!--Section3 end-->
+
+<!--Section4 start-->
+    <section class="section4">
+        <div class="section4-wrapper">
+            <div class="section4-row">
+                <h2 class="section4-title">
+                    Media
+                </h2>
+                <div class="section4-row-bottom">
+                    <span class="box">
+                                <a class="section4-link1" href="#" >
+                                    Barchasi
+                                </a>
+                        </span>
+                    <ul class="section4-list">
+                        <li class="section4-row-title">
+                            <a class="section4-link" href="#" >
+                                Foto galeriya
+                            </a>
+                        </li>
+                        <li class="section4-row-title">
+                            <a class="section4-link" href="#" >
+                                Video galeriya
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section4-card">
+                <img class="section4-card-img"
+                     src="images/card3.png"
+                     alt="Image"
+                     width="350"
+                     height="222">
+                <h3 class="section4-card-title">
+                    "DO`STLIKDONMAXSULOTLARI" AJ <br>
+                    boshqaruv raisi...
+                </h3>
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+            </div>
+            <div class="section4-card2">
+                <img class="section4-card-img"
+                     src="images/section2%20card2.png"
+                     alt="Image"
+                     width="350"
+                     height="222">
+                <h3 class="section4-card2-title">
+                    "DO`STLIKDONMAXSULOTLARI" AJ <br>
+                    boshqaruv raisi...
+                </h3>
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <img class="camera"
+                     src="images/camera.svg"
+                     alt="Camera"
+                     width="36"
+                     height="36">
+            </div>
+            <div class="section4-card2">
+                <img class="section4-card3-img"
+                     src="images/section2%20card3.png"
+                     alt="Image"
+                     width="350"
+                     height="222">
+                <h3 class="section4-card2-title">
+                    "DO`STLIKDONMAXSULOTLARI" AJ <br>
+                    boshqaruv raisi...
+                </h3>
+                <div class="not">
+                    <img class="not-date"
+                         src="images/kalindar.svg"
+                         alt=""
+                         width="20"
+                         height="20">
+                    <span class="date">
+                            16:48 / 12.11.20
+                        </span>
+                    <img class="not-watch"
+                         src="images/eye.svg"
+                         alt="Watch"
+                         width="20"
+                         height="20">
+                    <span class="watch">
+                            321
+                        </span>
+                    <img class="not-massage"
+                         src="images/massage.svg"
+                         alt="Massages"
+                         width="20"
+                         height="20">
+                    <span class="massage">
+                            100
+                        </span>
+                </div>
+                <img class="video"
+                     src="images/video.svg"
+                     alt="Video"
+                     width="36"
+                     height="36">
+            </div>
+        </div>
+    </section>
+<!--Section4 end-->
 </main>
 <!--Main end-->
 
